--- a/BlockNinja.html
+++ b/BlockNinja.html
@@ -285,6 +285,7 @@ a {
     window.parent.postMessage("resize", "*");
   }
 </script>
+<link rel="apple-touch-icon-precomposed" sizes="152x152" href="/favicon-152.png">
 </head>
 <body translate="no">
 
