--- a/BlockNinja.html
+++ b/BlockNinja.html
@@ -3,7 +3,7 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
-<link rel="shortcut icon" type="image/x-icon" href="./images/Favicon.png" />
+<link rel="shortcut icon" type="image/x-icon" href="./images/Favicon.ico" />
 <title>Block Ninja</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta name="theme-color" content="#2c3f51">
