--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 <meta charset="UTF-8">
 <link rel="shortcut icon" type="image/x-icon" href="./Favicon.ico" />
 <link rel="apple-touch-icon-precomposed" sizes="152x152" href="/favicon-152.png">
+<link rel='manifest' href='/manifest.json'>
 <title>Block Ninja</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta name="theme-color" content="#2c3f51">
@@ -286,6 +287,27 @@ a {
     window.parent.postMessage("resize", "*");
   }
 </script>
+
+<script>// This is the "Offline copy of pages" service worker
+
+  // Add this below content to your HTML page, or add the js file to your page at the very top to register service worker
+  
+  // Check compatibility for the browser we're running this in
+  if ("serviceWorker" in navigator) {
+    if (navigator.serviceWorker.controller) {
+      console.log("[PWA Builder] active service worker found, no need to register");
+    } else {
+      // Register the service worker
+      navigator.serviceWorker
+        .register("pwabuilder-sw.js", {
+          scope: "./"
+        })
+        .then(function (reg) {
+          console.log("[PWA Builder] Service worker has been registered for scope: " + reg.scope);
+        });
+    }
+  }
+  </script>
 
 </head>
 <body translate="no">
