--- a/index.html
+++ b/index.html
@@ -289,7 +289,7 @@ a {
 </script>
 
 <script>
-// This is the service worker with the Advanced caching
+// This is the "Offline page" service worker
 
 // Add this below content to your HTML page, or add the js file to your page at the very top to register service worker
 
